	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-sr1625-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-quanta-qssc-s4r-spec.h
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-s5000pal-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-windmill-spec.h,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-intel-common-spec.c,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-intel-s5500wb-spec.c,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-intel-quanta-qssc-s4r-spec.c,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-intel-s2600wp-spec.c:
	New file(s).

	* libfreeipmi/sel, libfreeipmi/util, ipmi-oem: Update for macro /
	variable change changes accordingly.

2020-01-08 Albert Chu <chu11@llnl.gov>

	* bmc-device/bmc-device.c (write_fru): Fix invalid type in
	pstdout_printf().

	* libfreeipmi/sel/ipmi-sel-string-intel-e52600v3-common.c
	(sel_string_output_intel_e52600v3_event_data3_discrete_oem,
	(sel_string_output_intel_e52600v3_event_data3_discrete_oem):
	Rename local variable that masked outside scope variable name.

2020-01-07 Albert Chu <chu11@llnl.gov>

	Mountains of minor fixes found by lgtm.com

	* bmc-device/bmc-device.c (write_fru): Fix invalid number of args
	to pstdout_printf.

	* ipmi-dcmi/ipmi-dcmi.c (_mandatory_platform_attributes): Fix
	argument type passed pstdout_printf().

	* ipmi-dcmi/ipmi-dcmi.c (get_asset_tag): Fix lgtm.com warning by
	casting unsigned char * to wchar_t *.

	* ipmi-fru/ipmi-fru.c (run_cmd_args): Fix lgtm.com warning correct
	output type in pstdout_printf().

	* ipmi-oem/ipmi-oem-dell.c (ipmi_oem_dell_get_system_info): Fix
	invalid output with invalid variable passed to pstdout_printf().

	* ipmi-oem/ipmi-oem-intel.c (ipmi_oem_intel_get_smtp_config): Fix
	invalid call to pstdout_printf(), forgot output parameters.

	* ipmi-oem/ipmi-oem-intelnm.c
	(_ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_common):